--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_DB_URL=mongodb://localhost:27017/trade
+MONGO_DB_URL=mongodb+srv://ravi:ravi1234@devravi-zhdlz.mongodb.net/trade?retryWrites=true&w=majority
 PORT=3000
 SECRET=bGVgGfug766ggVFt8%vU7T78yVtT68tFFtt*TtuFuT&*t78tUtuTft*&tyFT878Yft^T8GvTYuvubnmvhccb
