--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "normalize-port": "^1.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26","@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0",
+    "typescript": "~3.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -55,5 +57,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "8.14.0"
   }
 }
